# restmart

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  start.sh  vercel.json
.github/workflows/: reset_data.yml
android/: settings.gradle
android/app/: build.gradle
api/: permissions.py  urls.py  views.py
backend/: LICENSE  manage.py  pyproject.toml  pytest.ini  requirements.txt  vercel.json
backend/api/: urls.py  views.py
backend/fixtures/: product_data.json
backend/locustfiles/: browse_products.py
backend/orders/: admin.py  models.py  views.py
backend/products/: admin.py  category_urls.py  filters.py  models.py  permissions.py  views.py
backend/restmart/: wsgi.py
backend/users/: managers.py
fixtures/: product_data.json
frontend/: pnpm-lock.yaml
locustfiles/: browse_products.py
orders/: admin.py  models.py  serializers.py  services.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_cart_id.py  0003_alter_cartitem_unique_together.py  0004_alter_cart_id.py  0005_alter_order_options_alter_cartitem_quantity.py  0006_alter_order_options_alter_order_status.py  0007_remove_orderitem_price_remove_orderitem_quantity.py  0008_orderitem_quantity_alter_order_id.py  0009_alter_order_id.py  0010_alter_order_id.py  0011_orderitem_price.py  0012_orderitem_total_price.py
products/: models.py  product_urls.py  serializers.py  urls.py  validators.py  views.py
products/migrations/: 0001_initial.py  0002_initial.py  (+4 more)
restmart/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  serializers.py
(+132 files in other folders)
