[project]
name = "restmart"
version = "0.1.0"
description = "A E-commerce DRF Project"
authors = [
    {name = "Romjan Ali",email = "romjanvr5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-filter (>=24.3,<25.0)",
    "drf-yasg (>=1.21.8,<2.0.0)",
    "djoser (>=2.3.1,<3.0.0)",
    "drf-nested-routers (>=0.94.1,<0.95.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "cloudinary (>=1.42.2,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
django-debug-toolbar = "^5.0.1"
pytest-watch = "^4.2.0"
model-bakery = "^1.20.1"
locust = "^2.32.8"
django-silk = "^5.3.2"

